--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,4 @@
-@layer tailwind-base, antd;
-@layer tailwind-base {
-  @tailwind base;
-}
+@layer tailwind-base;
 @tailwind components;
 @tailwind utilities;
 
