--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,31 +1,39 @@
+/* Preload critical fonts */
+<link rel="preload" href="/fonts/inter.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="/fonts/notosans.woff2" as="font" type="font/woff2" crossorigin>
+
 @font-face {
   font-family: 'Inter';
-  src: url('/fonts/inter.ttf') format('truetype');
+  src: url('/fonts/inter.woff2') format('woff2'),
+       url('/fonts/inter.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
   font-family: 'Inter Itali';
-  src: url('/fonts/inter-itali.ttf') format('truetype');
+  src: url('/fonts/inter-itali.woff2') format('woff2'),
+       url('/fonts/inter-itali.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
   font-family: 'NotoSans';
-  src: url('/fonts/notosans.ttf') format('truetype');
+  src: url('/fonts/notosans.woff2') format('woff2'),
+       url('/fonts/notosans.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
   font-family: 'NotoSans Itali';
-  src: url('/fonts/notosans-italic.ttf') format('truetype');
+  src: url('/fonts/notosans-italic.woff2') format('woff2'),
+       url('/fonts/notosans-italic.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
